# docs-ai-extraction

./: .env.example  .gitignore  .replit  PushChanges.ps1  README.md  TASKS.md  feature_tasks.md  package-lock.json  package.json  push_changes.sh  pyproject.toml  redirect.html  replacements.txt  replit.nix  server.js  start.sh  start_ocr.py  start_python_ocr.sh  test-ingestion-simple.ps1  test-ingestion.html  test-ocr-services.sh  theme.json  tsconfig.json
.cursor/rules/: coding-rules.mdc  mock-data.mdc  (+2 more)
attached_assets/: 00-document-extraction-platform-prd.md  01-ingestion-service.md  01_dashboard_homepage_requirements.md  02-modularize-routes-ts.md  02_upload_docs_requirements.md  03_processing_page_requirements.md  04_documents_page_requirements.md  05_review_page_requirements.md  07_Mistral.md  08_LlamaParse.md  09_OpenAI_OCR.md  LlamaParse_User_Guide.md  OCR Document Extraction Application.txt  Pasted--OCR-Document-Extraction-Application-Tasks-A-running-list-of-tasks-to-guide-development-of-the--1744335482990.txt  Pasted-You-are-an-IT-support-assistant-designed-for-a-chat-interface-similar-to-WhatsApp-Your-goal-is-to-p-1744774336934.txt  TASKS.md  error_console.txt  instruction.py  json_mistral.json  json_ms_azure.json  json_openAI.json  llama_parse.py  md_ms_azure.md  md_openAI.md
client/: index.html
example/: instructions.py  main.py  mistral.py  mistral_response.txt  ms_azure.py  ms_azure_response.txt  open_ai.py  open_ai_response.txt
server/: config.ts  db.ts  index.ts  routes.ts  start_all.js  storage.ts  test-ocr.ts  trace-ocr.ts
shared/: schema.ts
(+60 files in other folders)
